--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="description" content="Our research aims to create a helmet detector framework as a preliminary step for re-identification using a limited dataset. Specifically, we detected jockeys' helmets throughout a 205-second race with six disjointed outdoor cameras, addressing challenges like occlusion and varying illumination.">
   <meta property="og:title" content="Detection and Re-Identification in the case of Horse Racing"/>
   <meta property="og:description" content="Our research aims to create a helmet detector framework as a preliminary step for re-identification using a limited dataset. Specifically, we detected jockeys' helmets throughout a 205-second race with six disjointed outdoor cameras, addressing challenges like occlusion and varying illumination."/>
-  <meta property="og:url" content="https://andrewjohngilbert.github.io/HelemetDetect/"/>
+  <meta property="og:url" content="https://andrewjohngilbert.github.io/HelmetDetect/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="assets/dear_Teaser.png" />
   <meta property="og:image:width" content="1200"/>
@@ -83,7 +83,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://andrewjohngilbert.github.io/HelemetDetect/assets/WillHorseDetectionCVMPPaper.pdf" target="_blank"
+                        <a href="https://andrewjohngilbert.github.io/HelmetDetect/assets/WillHorseDetectionCVMPPaper.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
