--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
 
   <meta name="twitter:title" content="Detection and Re-Identification in the case of Horse Racing">
-  <meta name="twitter:description" content="This research introduces a novel approach integrating 3D features and depth maps alongside RGB features to enhance action recognition accuracy. Our method involves processing estimated depth maps through a separate branch from the RGB feature encoder and fusing the features to understand the scene and actions comprehensively. Using the Side4Video framework and VideoMamba, which employ CLIP and VisionMamba for spatial feature extraction, our approach outperformed our implementation of the Side4Video network on the Something-Something V2 dataset">
+  <meta name="twitter:description" content="Our research aims to create a helmet detector framework as a preliminary step for re-identification using a limited dataset. Specifically, we detected jockeys' helmets throughout a 205-second race with six disjointed outdoor cameras, addressing challenges like occlusion and varying illumination.">
+  <meta property="og:title" content="Detection and Re-Identification in the case of Horse Racing">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="asserts/HelmetDetect_TeaserSmall.jpg">
   <meta name="twitter:card" content="summary_large_image">
